--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,68 @@
-<h1>Uyiosa Richmond Izekor</h1>
+<h2 class="welcome">Welcome to CSE Motors!</h2>
+
+<!-- This is the hero section of the home page.  -->
+<section id="hero_section" class="hero_section home_sections">
+    <div id="hero_information_card">
+        <div>
+            <h3>DMC Delorean</h3>
+            <p>3 Cup holders</p>
+            <p>Superman doors</p>
+            <p>Fuzzy dice!</p>
+        </div>
+        <a id="own_today_link" class="links" href="#">
+            <img src="/images/site/own_today.png"  alt="Own_Today.png">
+        </a>
+    </div>  
+    <img src="/images/vehicles/delorean.jpg"  alt="Delorean_Image.jpg">
+</section>
+
+<!-- This is the upgrades section. it will handle the grid of the different part for upgrades. -->
+<div id="upgrades_review_flex">
+    <section id="upgrades_section" class="home_sections">
+        <h3>Delorean Upgrades</h3>
+        <!-- The div container below will be in a grid display -->
+        <div id="upgrades_grid" title="Delorean_Upgrades_area">
+            <div>
+                <div class="image_grid_div">
+                    <img src="/images/upgrades/flux-cap.png"  alt="Flux Capacitor.png">
+                </div>
+                <a class="links" href="#">Flux Capacitor</a>
+            </div>
+
+            <div>
+                <div class="image_grid_div">
+                    <img src="/images/upgrades/flame.jpg"  alt="Flame.jpg">
+                </div>
+                <a class="links" href="#">Flame Decals</a>
+            
+            </div>
+
+            <div>
+                <div class="image_grid_div">
+                    <img src="/images/upgrades/bumper_sticker.jpg"  alt="Bumper_Stickers.jpg">
+                </div>
+                <a class="links" href="#">Bumper Stickers</a>
+            
+            </div>
+
+            <div>
+                <div class="image_grid_div">
+                    <img src="/images/upgrades/hub-cap.jpg" alt="Hub_cap.jpg">
+                </div>
+                <a class="links" href="#">Hub Caps</a>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="review_section" class="home_sections">
+        <h3>DMC Delorean Reviews</h3>
+        <ul>
+            <li>"So fast it's almost like traveling in time."(4/5)</li>
+            <li>"Coolest ride on the road."(4/5)</li>
+            <li>"I'm feeling McFly!"(5/5)</li>
+            <li>"The most futuristic ride of our day."(4.5/5)</li>
+            <li>"80's livin and I love it!"(5/5)</li>
+        </ul>
+    </section>
+</div>
