--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,15 @@
 <header id="top-header">
-    <span class="siteName">
-        <a href="/" title="Return to home page">CSE Motors</a>
-    </span>
+    <div class="sitename">
+        <a class="links" href="/" title="Return to home page">
+            <div class="icon_name_container">
+                <img src="/images/site/icon.png" alt="cse_motors_icon.png">
+                <h1>
+                    CSE Motors
+                </h1>
+            </div>
+        </a>
+    </div>
     <div id="tools">
-        <a title="Click to log in" href="/account/login">My Account</a>
+        <a class="links" title="Click to log in" href="/account/login">My Account</a>
     </div>
 </header>
