--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -182,6 +182,82 @@ The hero section will come next.
   margin: 2em 0;
 }
 
+/* **************************************
+* This is the css code for the vehicles view page that uses grid.
+* ************************************* */
+#inv-display {
+  list-style-type: none;
+  /* background-color: #e2e2e2; */
+  padding: 2em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 20px;
+  margin: 1em 0;
+}
+#inv-display > li {
+  padding: 4px;
+  border-radius: 4px;
+  box-shadow: 2px 3px 3px #434045;
+  background-color: #e2dce8;
+  text-align: center;
+}
+#inv-display > li > a > img {
+  width: 98%;
+  height: 50%;
+
+}
+.namePrice > h2 > a {
+  text-decoration: none;
+  color: #02325f;
+  font-family: "Oswald";
+  font-weight: 400;
+}
+.namePrice > h2 > a:hover{
+  color: #009ddc;
+}
+.namePrice > span {
+  font-family: "arimo";
+  
+}
+
+/* **************************************
+* This is the css code for the item view page that uses flex.
+* ************************************* */
+#inv_item {
+  padding: 2em;
+  margin: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+#item_image, #item_details {
+  margin: 0 1em;
+}
+#item_image > img {
+  width: 100%;
+  height: auto;
+}
+#item_details > h2 {
+  font-family: "Oswald";
+  color: #02325f; ;
+  /* font-size: xx-large; */
+  /* font-weight: 700; */
+}
+#item_details > ul {
+  /* background-color: #b6cae0; */
+  margin: 0;
+  padding: 1em;
+  list-style-type: none;
+}
+#item_details > ul > li {
+  padding: 1em;
+  margin: 2px 0.5em;
+  font-family: "arimo";
+}
+#item_details > ul li:nth-child(even){
+  background-color: #d9e4f0;
+}
+
 
 
 @media only screen and (min-width: 64em){
@@ -205,5 +281,13 @@ The hero section will come next.
 
   #upgrades_grid, #review_section {
     width: 50%;
+  }
+
+
+  /* **************************************
+  * This is the css code for the item view page that uses flex.
+  * ************************************* */
+  #inv_item {
+  flex-direction: row;
   }
 }
