--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- <script src="/js/script.js"></script> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
