--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -9,10 +9,20 @@
 
 <%- messages() %>
 
+<!-- This is to display a validation failed messages -->
+ <% if (errors) { %>
+  <ul class="notice failed">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
+
+
 <div id="form_container" class="form_holder">
-    <form action="#" id="login_form">
+    <form id="login_form" action="/account/login" method="post">
         <label for="email" class="form label">Email:</label>
-        <input type="email" id="email" class="form input" name="account_email" required>
+        <input type="email" id="email" class="form input" name="account_email" required value="<%= locals.account_email %>">
 
         <label for="password" class="form label">Password:</label>
         <input type="password" id="password" class="form input" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
