--- a/views/inventory/index.ejs
+++ b/views/inventory/index.ejs
@@ -14,3 +14,16 @@
 
 <!-- This is the link to call the add inventory view page with the form -->
 <a href="/inv/add_inv" id="add_inventory" class="add_item">Add Inventory</a>
+
+<!-- The heading for the inventory management. -->
+ <h2>Manage Inventory</h2>
+
+ <p>Select a classification to see the inventories of the classification</p>
+
+<%- classificationList %>
+
+<table id="inventoryDisplay"></table>
+
+<noscript>JavaScript must be enabled to use this page.</noscript>
+
+<script src="../../js/inventory.js"></script>
