--- a/views/inventory/update_inv.ejs
+++ b/views/inventory/update_inv.ejs
@@ -15,11 +15,9 @@
 
 <!-- The registeration form -->
 <div id="form_container" class="form_holder">
-  <h2 class="reg">Fill New Vehicle Details</h2>
+  <h2 class="reg">Edit Vehicle Details</h2>
 
-  <p id="req">All fields are required</p>
-
-  <form id="add_inv_form" action="/inv/add_inv" method="post">
+  <form id="update_form" action="/inv/edit" method="post">
     <%- classificationList %>
 
     <label for="invmake" class="form label">Vehicle Make:</label>
@@ -55,20 +53,13 @@
     />
 
     <label for="invdescription" class="form label">Description:</label>
-    <!-- <textarea -->
-      <!-- name="inv_description" -->
-      <!-- id="invdescription" -->
-      <!-- class="form input" -->
-      <!-- required -->
-      <!-- value="<%# locals.inv_description %>" -->
-    <!-- ></textarea> -->
     <input
-    type="text"
-    id="invdescription"
-    class="form input"
-    name="inv_description"
-    required
-    value="<%= locals.inv_description %>"
+      type="text"
+      id="invdescription"
+      class="form input"
+      name="inv_description"
+      required
+      value="<%= locals.inv_description %>"
     />
 
     <label for="invimage" class="form label">Image path:</label>
@@ -131,10 +122,18 @@
 
     <input
       type="submit"
-      id="add_vehicle"
+      id="update_vehicle"
       class="form_done"
       name="submit_button"
-      value="Add Vehicle"
+      value="Update Vehicle"
+      disabled
     />
+
+    <% if (locals.inv_id) { %>
+  <input type="hidden" name="inv_id" value="<%= locals.inv_id %>">
+<% } %>
   </form>
 </div>
+
+
+<script src="../../js/inv-update.js"></script>
