--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <h2 class="welcome">Welcome to CSE Motors!</h2>
 
-<%# messages() %>
+<%- messages() %>
 
 <!-- This is the hero section of the home page.  -->
 <section id="hero_section" class="hero_section home_sections">
