--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -31,6 +31,7 @@
             at least 1 number, and at least 1 special character.
         </p>
 
+        <span id="show_p" class="show_password">Show Password</span>
 
         <input type="submit" id="submit" class="form_done" name="submit_button" value="Login">
     </form>
@@ -38,3 +39,4 @@
     <p id="sign_up">No account? <a href="/account/register" id="registeration">Sign-up</a></p>
 </div>
 
+<script src="../../js/script.js"></script>
