--- a/views/account/update.ejs
+++ b/views/account/update.ejs
@@ -2,30 +2,27 @@
 <!-- And making the title value as our h1 value with an if statement. -->
 <% if (title) { %>
 <h1 class="page_head"><%= title %></h1>
-<% } else {
-  res.redirect('/')
-} %>
-
-<!-- This is to display success or failed attempt of the registeration process. -->
-<%- messages() %>
+<% } else { res.redirect('/') } %>
 
 <!-- This is to display a validation failed messages -->
- <% if (errors) { %>
-  <ul class="notice failed">
- <% errors.array().forEach(error => { %>
-   <li><%= error.msg %></li>
-<%  }) %>
- </ul>
+<% if (errors) { %>
+<ul class="notice failed">
+  <% errors.array().forEach(error => { %>
+  <li><%= error.msg %></li>
+  <% }) %>
+</ul>
 <% } %>
 
-<!-- The registeration form -->
+
+
+<!-- The account details update form -->
 <div id="form_container" class="form_holder">
 
-     <h2 class="reg">Register</h2>
+     <h2 class="reg">Edit Account Details.</h2>
 
      <p class="req">All fields are required</p>
  
-    <form id="register_form" action="/account/register" method="post" >
+    <form id="update_form" action="/account/update-profile" method="post" >
 
         <label for="fname" class="form label">First Name:</label>
         <input type="text" id="fname" class="form input" name="account_firstname" required value="<%= locals.account_firstname %>">
@@ -36,6 +33,25 @@
         <label for="email" class="form label">Email:</label>
         <input type="email" id="email" class="form input" name="account_email" required value="<%= locals.account_email %>">
 
+        <input type="hidden" name="account_id" value="<%= locals.account_id %>" />
+ 
+        <input type="submit" id="update_in" class="form_done" name="submit_button" value="Apply Update">
+    </form>
+
+
+<!-- The account password update form -->
+
+    <h2 class="reg">Change Password</h2>
+
+     <p class="req">Field is required</p>
+ 
+    <form id="change_form" action="/account/change-password" method="post" >
+        <p class="pattern">
+            Please, note that if you enter a new 
+            password and click the change password 
+            button it will update your previous password.
+        </p>
+
         <label for="password" class="form label">Password:</label>
         <input type="password" id="password" class="form input" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
 
@@ -44,11 +60,15 @@
         </p>
 
         <span id="show_p" class="show_password">Show Password</span>
- 
-        <input type="submit" id="register" class="form_done" name="submit_button" value="Register">
+        
+        <input type="hidden" name="account_id" value="<%= locals.account_id %>" />
+       
+        <input type="submit" id="change_p" class="form_done" name="submit_button" value="Change Password">
     </form>
 
 </div>
+
+
 
 
 <script src="../../js/script.js"></script>
