--- a/views/inventory/add_inv.ejs
+++ b/views/inventory/add_inv.ejs
@@ -1,7 +1,7 @@
 <!-- Inserting the main content headings  -->
 <!-- And making the title value as our h1 value with an if statement. -->
 <% if (title) { %>
-<h1><%= title %></h1>
+<h1 class="page_head"><%= title %></h1>
 <% } else { res.redirect('/') } %>
 
 <!-- This is to display a validation failed messages -->
@@ -17,7 +17,7 @@
 <div id="form_container" class="form_holder">
   <h2 class="reg">Fill New Vehicle Details</h2>
 
-  <p id="req">All fields are required</p>
+  <p class="req">All fields are required</p>
 
   <form id="add_inv_form" action="/inv/add_inv" method="post">
     <%- classificationList %>
