--- a/views/inventory/index.ejs
+++ b/views/inventory/index.ejs
@@ -1,7 +1,7 @@
 <!-- Inserting the main content headings  -->
 <!-- And making the title value as our h1 value with an if statement. -->
 <% if (title) { %>
-<h1><%= title %></h1>
+<h1 class="page_head"><%= title %></h1>
 <% } else {
   res.redirect('/')
 } %>
@@ -16,13 +16,13 @@
 <a href="/inv/add_inv" id="add_inventory" class="add_item">Add Inventory</a>
 
 <!-- The heading for the inventory management. -->
- <h2>Manage Inventory</h2>
+ <h2 class="headers">Manage Inventory</h2>
 
  <p>Select a classification to see the inventories of the classification</p>
 
 <%- classificationList %>
 
-<table id="inventoryDisplay"></table>
+<table id="inventoryDisplay" class="inv_table table"></table>
 
 <noscript>JavaScript must be enabled to use this page.</noscript>
 
