--- a/views/account/forget.ejs
+++ b/views/account/forget.ejs
@@ -19,12 +19,19 @@
 <% } %>
 
 
-<div id="form_container" class="form_holder">
-    <form id="login_form" action="/account/login" method="post">
-        <label for="email" class="form label">Email:</label>
+<div id="confirm_email" class="form_holder">
+    <form id="confirm_email_form" action="/account/confirm" method="post">
+        <label for="email" class="form label">Enter Your Email:</label>
         <input type="email" id="email" class="form input" name="account_email" required value="<%= locals.account_email %>">
 
-        <label for="password" class="form label">Password:</label>
+
+        <input type="submit" id="submit" class="form_done" name="submit_button" value="Confirm Email">
+    </form>
+
+
+    <form id="change_password" action="/account/change" method="post">
+
+        <label for="password" class="form label">New Password:</label>
         <input type="password" id="password" class="form input" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
         
         <p class="pattern">Password must be a minimum of 12 character in lenght, at least 1 capital letter,
@@ -32,12 +39,13 @@
         </p>
 
         <span id="show_p" class="show_password">Show Password</span>
-        <a id="forgetP" class="link" href="/account/forget">Forgot Password</a>
 
-        <input type="submit" id="submit" class="form_done" name="submit_button" value="Login">
+        <input type="hidden" name="account_id" value="<%= locals.account_id %>" />
+
+        <input type="submit" id="submit" class="form_done" name="submit_button" value="Change Password">
     </form>
 
-    <p id="sign_up">No account? <a href="/account/register" id="registeration">Sign-up</a></p>
 </div>
+
 
 <script src="../../js/script.js"></script>
