--- a/views/account/index.ejs
+++ b/views/account/index.ejs
@@ -21,8 +21,16 @@
   id="acc_update"
   class="links m_link"
   title="Click to manage account info"
-  >Updata Account Information</a
->
+  >Updata Account Information</a>
+
+<a
+  href="/account/delete/<%= accountData.account_id %>"
+  id="acc_delete"
+  class="links m_link"
+  title="Click to manage account info"
+  >Delete My Account</a>
+
+
 <% if (accountData.account_type !== 'Client') { %>
 <h3 id="acc_h3" class="headers">Inventory Management</h3>
 <p>
