--- a/views/account/forget.ejs
+++ b/views/account/forget.ejs
@@ -42,7 +42,7 @@
 
         <input type="hidden" name="account_id" value="<%= locals.account_id %>" />
 
-        <input type="submit" id="submit" class="form_done" name="submit_button" value="Change Password">
+        <input type="submit" id="submitp" class="form_done" name="submit_button" value="Change Password">
     </form>
 
 </div>
